modified:   defaults/main.yml 	modified:   tasks/Config/Linux.yml 	modified:   tasks/Config/Linux/Environment.yml 	new file:   tasks/Config/Linux/RedHat/6/NTP.yml 	new file:   tasks/Config/Linux/RedHat/7/NTP.yml 	new file:   templates/chrony.conf.j2 	modified:   vars/RedHat.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -317,6 +317,7 @@ node_exporter_collector: # 普罗米修斯客户端系统收集器。
 #  - 'xfs' # kernel 4.4+
 #  - 'zfs'
 node_exporter_systemd_collector: # 普罗米修斯客户端服务收集器。
+  - 'chronyd'
   - 'crond'
   - 'orchestrator'
   - 'ntpd'
