--- a/tasks/Config/Linux.yml
+++ b/tasks/Config/Linux.yml
@@ -3,6 +3,9 @@
 
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Service.yml'
 
+- include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/NTP.yml'
+  when: os_time_server is defined
+
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Rsyslog.yml'
   when: syslog | bool
 
