modified:   meta/main.yml 	new file:   tasks/Beats/Linux.yml 	new file:   tasks/Beats/Win32NT.yml 	modified:   tasks/Software/RedHat.yml 	modified:   tasks/main.yml

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,6 +37,10 @@
   when: os_exporter | bool
   tags: exporter
 
+- name: Include Elastic Beats tasks for specific OS
+  include: 'Beats/{{ ansible_system }}.yml'
+  tags: beats
+
 - name: Include OSSec tasks for specific OS
   include: 'OSSec/{{ ansible_system }}.yml'
   when:
