modified:   README.md 	modified:   tasks/Config/Linux/Environment.yml 	modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/Config/Linux/RedHat/6/Service.yml 	modified:   tasks/Config/Linux/RedHat/7/Service.yml 	modified:   tasks/Config/Linux/RedHat/Resource.yml 	modified:   tasks/Config/Linux/RedHat/User.yml 	modified:   tasks/Config/Win32NT/misc.yml 	modified:   tasks/Exporter/Linux/node.yml 	modified:   tasks/Exporter/Win32NT.yml 	modified:   tasks/Harden/Linux/RedHat/Audit.yml 	modified:   tasks/Harden/Linux/RedHat/Modules.yml 	modified:   tasks/Harden/Linux/RedHat/Security.yml 	modified:   tasks/Harden/Linux/RedHat/User.yml 	modified:   tasks/Harden/Win32NT/audit.yml 	modified:   tasks/Harden/Win32NT/password.yml 	modified:   tasks/Software/Win32NT.yml 	modified:   templates/ossec.conf.j2

--- a/tasks/Config/Linux/RedHat/6/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/6/Rsyslog.yml
@@ -12,8 +12,7 @@
   yum:
     name: '{{ item }}'
     state: 'latest'
-  with_items:
-    - '{{ rsyslog_packages }}'
+  loop: '{{ rsyslog_packages }}'
   register: soft_update
   until: soft_update is succeeded
   retries: 3
