--- a/tasks/Exporter/Win32NT.yml
+++ b/tasks/Exporter/Win32NT.yml
@@ -49,13 +49,11 @@
   win_template:
     src: 'scripts/{{ ansible_system }}/{{ item }}.j2'
     dest: 'C:\Program Files\wmi_exporter\{{ item }}.ps1'
-  with_items:
-    - '{{ wmi_exporter_collector_scripts }}'
+  loop: '{{ wmi_exporter_collector_scripts }}'
 
 - name: Node information collection at first time
   win_shell: 'C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -ExecutionPolicy ByPass -File "C:\Program Files\wmi_exporter\{{ item }}.ps1"'
-  with_items:
-    - '{{ wmi_exporter_collector_scripts }}'
+  loop: '{{ wmi_exporter_collector_scripts }}'
 
 - name: Create a scheduled task to node info collector
   win_scheduled_task:
@@ -69,8 +67,7 @@
     triggers:
     - type: daily
       start_boundary: '2017-10-09T0{{ 5|random(start=1) }}:00:00'
-  with_items:
-    - '{{ wmi_exporter_collector_scripts }}'
+  loop: '{{ wmi_exporter_collector_scripts }}'
 
 - include_tasks: '{{ ansible_system }}/register.yml'
   when:
