--- a/tasks/Harden/Win32NT/password.yml
+++ b/tasks/Harden/Win32NT/password.yml
@@ -1,5 +1,4 @@
 ---
 - name: 'Local user password policy configuration'
   win_command: 'net accounts {{ item.value }}'
-  with_items:
-    - '{{ os_win_local_user_pass_role }}'
+  loop: '{{ os_win_local_user_pass_role }}'
