--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -10,7 +10,7 @@
     dest: '/etc/profile'
     state: 'present'
     line: '{{ item }}'
-  with_items:
+  loop:
     - 'HISTSIZE={{ os_linux_shell_history }}'
     - 'TMOUT={{ os_linux_shell_timeout }}'
     - PROMPT_COMMAND='history -a >(tee -a ~/.bash_history | logger -t "$USER ${SSH_CLIENT%% *} $PWD")'
@@ -49,8 +49,7 @@
     dest: '/etc/postfix/main.cf'
     regexp: '{{ item.regexp }}'
     line: '{{ item.line }}'
-  with_items:
-    - { regexp: '^relayhost =', line: 'relayhost = {{ os_linux_MTA_relayhost }}' }
+  loop: { regexp: '^relayhost =', line: 'relayhost = {{ os_linux_MTA_relayhost }}' }
   when: os_linux_MTA_relayhost is defined
 
 - name: Configure terminal scheme
@@ -58,7 +57,7 @@
     dest: '/etc/bashrc'
     state: 'present'
     line: '{{ item }}'
-  with_items:
+  loop:
     - 'TMOUT={{ os_linux_shell_timeout }}'
     - "IP=$(/sbin/ifconfig {{ ansible_default_ipv4.alias }}|awk '/inet / {print $2}'|cut -d ':' -f 2)"
     - 'export PS1="[\[\033[01;31m\]\u\[\033[00m\]@\[\033[01;32m\]\h\[\033[00m\] \[\033[01;36m\]\$IP \[\033[01;33m\]\W\[\033[00m\]]\[\033[00;34m\]$\[\033[00m\]"'
