--- a/tasks/Config/Linux/RedHat/7/Service.yml
+++ b/tasks/Config/Linux/RedHat/7/Service.yml
@@ -6,8 +6,7 @@
     state: 'stopped'
   async: 1
   poll: 0
-  with_items:
-    - "{{ vars['disable_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
+  loop: "{{ vars['disable_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
   when: os_linux_disable_unused_service | bool
   ignore_errors: yes
 
@@ -18,7 +17,6 @@
     state: 'started'
   async: 1
   poll: 0
-  with_items:
-    - "{{ vars['enabled_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
+  loop: "{{ vars['enabled_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
   when: os_linux_enables_needed_service | bool
   ignore_errors: yes
