modified:   defaults/main.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -91,10 +91,10 @@ os_packetbeat_port_arg: # Packetbeat 通信端口。
 os_packetbeat_flows: false # 是否配置流以监控网络流量。
 os_packetbeat_ignore_outgoing: false # 是否忽略从服务器启动的所有事务。
 os_packetbeat_protocols: # 定义监控的通信协议。
-  - 'icmp'
   - 'http'
   - 'dns'
   - 'tls'
+#  - 'icmp'
 #  - 'amqp'
 #  - 'cassandra'
 #  - 'dhcpv4'
