modified:   tasks/Beats/Linux.yml

--- a/tasks/Beats/Linux.yml
+++ b/tasks/Beats/Linux.yml
@@ -7,14 +7,14 @@
     beats_version: '{{ os_auditbeat_version }}'
     beats_port_arg: '{{ os_auditbeat_port_arg }}'
     beats_output_type: '{{ os_auditbeat_output.type }}'
-    beats_output_auth: '{{ os_auditbeat_output.auth | bool }}'
-    beats_output_https: '{{ os_auditbeat_output.https | bool }}'
+    beats_output_auth: '{{ os_auditbeat_output.auth | default(false) | bool }}'
+    beats_output_https: '{{ os_auditbeat_output.https | default(false) | bool }}'
     beats_output_host: '{{ os_auditbeat_output.elasti_host }}'
     beats_output_port: '{{ os_auditbeat_output.elasti_port }}'
-    beats_kibana_host: '{{ os_auditbeat_output.kibana_host }}'
-    beats_kibana_port: '{{ os_auditbeat_output.kibana_port }}'
-    beats_output_user: '{{ os_auditbeat_output.user }}'
-    beats_output_pass: '{{ os_auditbeat_output.pass }}'
+    beats_kibana_host: '{{ os_auditbeat_output.kibana_host | default("") }}'
+    beats_kibana_port: '{{ os_auditbeat_output.kibana_port | default("") }}'
+    beats_output_user: '{{ os_auditbeat_output.user | default("") }}'
+    beats_output_pass: '{{ os_auditbeat_output.pass | default("") }}'
     auditbeat_audit_rules: '{{ os_linux_audit_rules }}'
   when:
     - os_harden | bool
@@ -29,14 +29,14 @@
     beats_version: '{{ os_packetbeat_version }}'
     beats_port_arg: '{{ os_packetbeat_port_arg }}'
     beats_output_type: '{{ os_packetbeat_output.type }}'
-    beats_output_auth: '{{ os_packetbeat_output.auth | bool }}'
-    beats_output_https: '{{ os_packetbeat_output.https | bool }}'
+    beats_output_auth: '{{ os_packetbeat_output.auth | default(false) | bool }}'
+    beats_output_https: '{{ os_packetbeat_output.https | default(false) | bool }}'
     beats_output_host: '{{ os_packetbeat_output.elasti_host }}'
     beats_output_port: '{{ os_packetbeat_output.elasti_port }}'
-    beats_kibana_host: '{{ os_packetbeat_output.kibana_host }}'
-    beats_kibana_port: '{{ os_packetbeat_output.kibana_port }}'
-    beats_output_user: '{{ os_packetbeat_output.user }}'
-    beats_output_pass: '{{ os_packetbeat_output.pass }}'
+    beats_kibana_host: '{{ os_packetbeat_output.kibana_host | default("") }}'
+    beats_kibana_port: '{{ os_packetbeat_output.kibana_port | default("") }}'
+    beats_output_user: '{{ os_packetbeat_output.user | default("") }}'
+    beats_output_pass: '{{ os_packetbeat_output.pass | default("") }}'
     packetbeat_flows: '{{ os_packetbeat_flows | bool }}'
     packetbeat_protocols: '{{ os_packetbeat_protocols }}'
     packetbeat_ignore_outgoing: '{{ os_packetbeat_ignore_outgoing | bool }}'
