--- a/tasks/Beats/Linux.yml
+++ b/tasks/Beats/Linux.yml
@@ -9,8 +9,8 @@
     beats_output_type: '{{ os_auditbeat_output.type }}'
     beats_output_auth: '{{ os_auditbeat_output.auth | default(false) | bool }}'
     beats_output_https: '{{ os_auditbeat_output.https | default(false) | bool }}'
-    beats_output_host: '{{ os_auditbeat_output.elasti_host }}'
-    beats_output_port: '{{ os_auditbeat_output.elasti_port }}'
+    beats_output_host: '{{ os_auditbeat_output.host }}'
+    beats_output_port: '{{ os_auditbeat_output.port }}'
     beats_kibana_host: '{{ os_auditbeat_output.kibana_host | default("") }}'
     beats_kibana_port: '{{ os_auditbeat_output.kibana_port | default("") }}'
     beats_output_user: '{{ os_auditbeat_output.user | default("") }}'
@@ -31,8 +31,8 @@
     beats_output_type: '{{ os_packetbeat_output.type }}'
     beats_output_auth: '{{ os_packetbeat_output.auth | default(false) | bool }}'
     beats_output_https: '{{ os_packetbeat_output.https | default(false) | bool }}'
-    beats_output_host: '{{ os_packetbeat_output.elasti_host }}'
-    beats_output_port: '{{ os_packetbeat_output.elasti_port }}'
+    beats_output_host: '{{ os_packetbeat_output.host }}'
+    beats_output_port: '{{ os_packetbeat_output.port }}'
     beats_kibana_host: '{{ os_packetbeat_output.kibana_host | default("") }}'
     beats_kibana_port: '{{ os_packetbeat_output.kibana_port | default("") }}'
     beats_output_user: '{{ os_packetbeat_output.user | default("") }}'
