--- a/tasks/OSSec/Win32NT/osquery.yml
+++ b/tasks/OSSec/Win32NT/osquery.yml
@@ -2,9 +2,9 @@
 - name: Install chocolatey
   win_chocolatey:
     name: 'chocolatey'
-    source: '{{ win_chocolatey_source }}'
+    source: '{{ os_win_chocolatey_source }}'
     state: 'downgrade'
-    version: '{{ win_chocolatey_version }}'
+    version: '{{ os_win_chocolatey_version }}'
     timeout: '120'
   environment:
     no_proxy: '*'
@@ -18,7 +18,7 @@
 - name: Osquery software installation
   win_chocolatey:
     name: 'osquery'
-    source: '{{ win_chocolatey_source }}'
+    source: '{{ os_win_chocolatey_source }}'
     state: 'latest'
     timeout: '120'
   environment:
