--- a/tasks/Exporter/Linux/RedHat.yml
+++ b/tasks/Exporter/Linux/RedHat.yml
@@ -1,22 +1,22 @@
 ---
-- name: 'Add exporter YUM repositories'
+- name: Add exporter YUM repositories
   yum_repository:
-    name: '{{ vars[item.name + "_repo_name"] }}'
-    description: '{{ vars[item.name + "_repo_name"] }} YUM repository'
-    file: '{{ vars[item.name + "_repo_name"] }}'
-    baseurl: '{{ vars[item.name + "_repo_url"] }}'
+    name: '{{ vars["os_" + item.name + "_repo_name"] }}'
+    description: '{{ vars["os_" + item.name + "_repo_name"] }} YUM repository'
+    file: '{{ vars["os_" + item.name + "_repo_name"] }}'
+    baseurl: '{{ vars["os_" + item.name + "_repo_url"] }}'
     gpgcheck: 'no'
     timeout: '60'
   loop: '{{ os_linux_exporter_type }}'
 
-- name: 'Install the exporter'
+- name: Install the exporter
   yum:
-    name: '{{ vars[item.name + "_software"] }}'
+    name: '{{ vars["os_" + item.name + "_software"] }}'
     state: 'present'
     validate_certs: 'no'
     disable_gpg_check: 'yes'
   register: soft_updated
   until: soft_updated is succeeded
-  retries: 3
-  delay: 5
+  retries: 5
+  delay: 2
   loop: '{{ os_linux_exporter_type }}'
