--- a/tasks/Software/RedHat.yml
+++ b/tasks/Software/RedHat.yml
@@ -1,22 +1,22 @@
 ---
-- name: 'Add EPEL YUM repositories'
+- name: Add EPEL YUM repositories
   yum_repository:
-    name: '{{ epel_repo_name }}'
-    description: '{{ epel_repo_name }} YUM repo'
-    file: '{{ epel_repo_name }}'
-    baseurl: '{{ epel_repo_url }}'
+    name: '{{ os_epel_repo_name }}'
+    description: '{{ os_epel_repo_name }} YUM repo'
+    file: '{{ os_epel_repo_name }}'
+    baseurl: '{{ os_epel_repo_url }}'
     gpgcheck: 'no'
     timeout: '60'
 
-- name: 'Configure YUM proxy'
+- name: Configure YUM proxy
   lineinfile:
     dest: '/etc/yum.conf'
     line: 'proxy={{ os_proxy_server }}'
   when: os_proxy_server is defined
 
-- name: 'Install the base packages'
+- name: Install the base packages
   yum:
-    name: '{{ ",".join(vars["base_packages_" + ansible_os_family + "_" + ansible_distribution_major_version]) }}'
+    name: '{{ ",".join(vars["os_base_packages_" + ansible_os_family + "_" + ansible_distribution_major_version]) }}'
     state: 'present'
     validate_certs: 'no'
     disable_gpg_check: 'yes'
@@ -26,12 +26,12 @@
   retries: 5
   delay: 2
 
-- name: 'Remove the useless packages'
+- name: Remove the useless packages
   yum:
-    name: '{{ ",".join(vars["remove_packages_" + ansible_os_family + "_" + ansible_distribution_major_version]) }}'
+    name: '{{ ",".join(vars["os_remove_packages_" + ansible_os_family + "_" + ansible_distribution_major_version]) }}'
     state: 'absent'
 
-- name: 'Update all packages'
+- name: Update all packages
   yum:
     name: '*'
     state: 'latest'
